Fixed terms text in registration; improved testing; switched to development of 0.1.1

--- a/FluentPort/Views/RegisterView.axaml
+++ b/FluentPort/Views/RegisterView.axaml
@@ -44,6 +44,7 @@
                                                 Cursor="Hand" />
                                 </Button>
                                 <TextBlock Text=" and "
+                                        FontSize="18"
                                         VerticalAlignment="Center" />
                                 <Button x:Name="PrivacyLink"
                                         Click="PrivacyClicked"
