--- a/FluentPort/MainWindow.axaml
+++ b/FluentPort/MainWindow.axaml
@@ -8,11 +8,11 @@
         x:Class="FluentPort.MainWindow"
         Title="FluentPort"
         Icon="avares://FluentPort/Assets/app.ico"
-        Background="{StaticResource RaisinBlackColor}">
+        Background="{DynamicResource RaisinBlackColor}">
         <Grid>
                 <ContentControl>
                         <Grid RowDefinitions="Auto *">
-                                <Border BorderBrush="{StaticResource PrimaryColor}"
+                                <Border BorderBrush="{DynamicResource PrimaryColor}"
                                         BorderThickness="0 0 0 2"
                                         Grid.Row="0"
                                         IsVisible="False"
@@ -21,7 +21,7 @@
                                                 ColumnDefinitions="Auto * Auto">
                                                 <Button Grid.Column="0"
                                                         Click="AccountBtnClicked"
-                                                        Background="Transparent"
+                                                        Background="{DynamicResource RaisinBlackColor}"
                                                         Margin="10 0 0 0"
                                                         CornerRadius="16">
                                                         <StackPanel Orientation="Horizontal"
@@ -32,7 +32,7 @@
                                                                         Height="48"
                                                                         CornerRadius="48"
                                                                         ClipToBounds="True"
-                                                                        Background="White"
+                                                                        Background="{DynamicResource WhiteSmokeColor}"
                                                                         x:Name="ProfilePictureBorder">
                                                                         <Image
                                                                                 x:Name="ProfilePicture"
@@ -57,7 +57,8 @@
                                                                                 VerticalAlignment="Center"
                                                                                 FontSize="24"
                                                                                 FontWeight="Medium"
-                                                                                Margin="10 0 0 0" />
+                                                                                Margin="10 0 0 0"
+                                                                                Foreground="{DynamicResource WhiteSmokeColor}" />
                                                                 </StackPanel>
                                                         </StackPanel>
                                                 </Button>
