--- a/FluentPort/Overlays/AddTunnelHelpOverlay.axaml
+++ b/FluentPort/Overlays/AddTunnelHelpOverlay.axaml
@@ -12,12 +12,12 @@
         <StackPanel>
             <StackPanel Orientation="Horizontal"
                 HorizontalAlignment="Center">
-                <TextBlock Foreground="White"
+                <TextBlock Foreground="{DynamicResource WhiteSmokeColor}"
                     FontSize="48"
                     FontWeight="Bold">Local connection</TextBlock>
             </StackPanel>
             <Grid ColumnDefinitions="0.5* 2* 0.5*">
-                <TextBlock Foreground="White"
+                <TextBlock Foreground="{DynamicResource WhiteSmokeColor}"
                     FontSize="22"
                     FontWeight="Medium"
                     TextWrapping="Wrap"
