--- a/FluentPort/Overlays/ChangePasswordOverlay.axaml
+++ b/FluentPort/Overlays/ChangePasswordOverlay.axaml
@@ -12,7 +12,7 @@
         <StackPanel>
             <StackPanel Orientation="Horizontal"
                 HorizontalAlignment="Center">
-                <TextBlock Foreground="White"
+                <TextBlock Foreground="{DynamicResource WhiteSmokeColor}"
                     FontSize="48"
                     FontWeight="Bold"
                     Margin="0 0 0 10">Change Password</TextBlock>
