--- a/FluentPort/Overlays/OfflineOverlay.axaml
+++ b/FluentPort/Overlays/OfflineOverlay.axaml
@@ -12,17 +12,17 @@
         <StackPanel>
             <StackPanel Orientation="Horizontal"
                 HorizontalAlignment="Center">
-                <TextBlock Foreground="White"
+                <TextBlock Foreground="{DynamicResource WhiteSmokeColor}"
                     FontSize="32"
                     FontWeight="Bold">You are</TextBlock>
-                <TextBlock Foreground="White"
+                <TextBlock Foreground="{DynamicResource WhiteSmokeColor}"
                     FontSize="32"
                     FontWeight="Bold"
                     Text=" " />
                 <TextBlock Foreground="Red"
                     FontSize="32"
                     FontWeight="Bold">offline</TextBlock>
-                <TextBlock Foreground="White"
+                <TextBlock Foreground="{DynamicResource WhiteSmokeColor}"
                     FontSize="32"
                     FontWeight="Bold">!</TextBlock>
             </StackPanel>
